--- a/index.html
+++ b/index.html
@@ -44,19 +44,7 @@
             <h2>Our products</h2>
         </div>
         <div class="products-center">
-            <!-- single product -->
-            <article class="product">
-                <div class="img-container">
-                    <img src="./images/product-1.jpeg" alt="product img" class='product-img'>
-                    <button class="bag-btn" data-id="1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to bag
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$ 156</h4>
-            </article>
-            <!-- end of single product -->
+            <!-- Singles products -->
             <!-- cart  -->
             <div class="cart-overlay">
                 <div class="cart">
